--- a/ShoppingCart/ShoppingCart.csproj
+++ b/ShoppingCart/ShoppingCart.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Models\VegCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BuyMoreGetMoreService.cs" />
+    <Compile Include="Services\Interfaces\ICategoryService.cs" />
+    <Compile Include="Services\Interfaces\IProductService.cs" />
+    <Compile Include="Services\ProductService.cs" />
     <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\CalculationService.cs" />
     <Compile Include="Services\Interfaces\IBuyMoreGetMoreService.cs" />
