--- a/Logger/Logger.csproj
+++ b/Logger/Logger.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{960DF5D3-A390-4233-A379-267A6AE62B2E}</ProjectGuid>
+    <ProjectGuid>{F70037DC-7F7C-438A-A62C-D5BC0B6D350E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ShoppingCart</RootNamespace>
-    <AssemblyName>ShoppingCart</AssemblyName>
+    <RootNamespace>Logger</RootNamespace>
+    <AssemblyName>Logger</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,35 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
-    <Compile Include="Models\BuyMoreGetMoreCartItem.cs" />
-    <Compile Include="Models\CartItem.cs" />
-    <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\CheeseCategory.cs" />
-    <Compile Include="Models\DairyCategory.cs" />
-    <Compile Include="Models\FruitCategory.cs" />
-    <Compile Include="Models\MilkCategory.cs" />
-    <Compile Include="Models\Product.cs" />
-    <Compile Include="Models\ProduceCategory.cs" />
-    <Compile Include="Models\ShoppingCart.cs" />
-    <Compile Include="Models\VegCategory.cs" />
+    <Compile Include="ILogger.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\BuyMoreGetMoreService.cs" />
-    <Compile Include="Services\Interfaces\ICategoryService.cs" />
-    <Compile Include="Services\Interfaces\IProductService.cs" />
-    <Compile Include="Services\ProductService.cs" />
-    <Compile Include="Services\CategoryService.cs" />
-    <Compile Include="Services\CalculationService.cs" />
-    <Compile Include="Services\Interfaces\IBuyMoreGetMoreService.cs" />
-    <Compile Include="Services\Interfaces\ICalculationService.cs" />
-    <Compile Include="Services\Interfaces\IShoppingCartService.cs" />
-    <Compile Include="Services\ShoppingCartService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Logger\Logger.csproj">
-      <Project>{f70037dc-7f7c-438a-a62c-d5bc0b6d350e}</Project>
-      <Name>Logger</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
